test/assignExp3.slq

def main(){
	x:=vector(2,0:ğ”¹);
	(x[0],x[0])=(1,0); /// error
	i:=0;
	(x[0],x[i])=(1,0); /// error
}
